<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@android:color/white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:paddingStart="16dp"
        android:layout_marginTop="40dp"
        android:paddingEnd="16dp">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:layout_gravity="center_vertical"
            app:tint="@android:color/white" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Alarm"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/btn_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:layout_gravity="end|center_vertical"
            app:tint="@android:color/white" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Time:"
            android:textSize="16sp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/tv_time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tap to pick time"
            android:textSize="24sp"
            android:background="@android:color/darker_gray"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Label:"
            android:layout_marginTop="24dp" />

        <EditText
            android:id="@+id/et_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="e.g. Wake up, Meeting"
            android:inputType="textPersonName"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Enable this alarm"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/switch_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:layout_margin="16dp"
            android:visibility="gone"/>

    </LinearLayout>


</LinearLayout>
