<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@android:color/white"
    android:padding="10dp"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/alarm_time"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:text="06:00 am" />

    <TextView
        android:id="@+id/alarm_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        android:text="Daily" />

    <Switch
        android:id="@+id/alarm_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
