<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_alarm"
        android:title="Alarm" />

    <item
        android:id="@+id/nav_clock"
        android:icon="@drawable/ic_clock"
        android:title="Clock" />


</menu>
